feat: adicionando imagem no index.html

--- a/modulo2/exercicio/index.html
+++ b/modulo2/exercicio/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Título da Página</title>
+        <title>Fanpage de Dogs</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Aqui vai um título</h1>
+        <h1>Perfil #dogsonintagram</h1>
+        <img src="imagens/cute-australian-shepherd_138676-2071.jpg">
     </body>
 </html>
